--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,7 @@
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
-    --main-color: #2274a2;
+    --primary-color: #2274a5;
 }
 
 * {
@@ -44,5 +44,16 @@ p {
     }
     to {
         opacity: 1;
+    }
+}
+
+@keyframes growth {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
     }
 }
