--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,8 @@
     min-height: 26px;
 }
 
-.header__navbar-item--qr:hover .header__qr {
+.header__navbar-item--qr:hover .header__qr,
+.header__navbar-item--has-noti:hover .header__noti {
     display: block;
 }
 
@@ -40,7 +41,7 @@
     align-items: center;
 }
 
-.header__navbar-item:hover,
+.header__navbar-item:hover a,
 .header__navbar-item-link:hover,
 .header__navbar-icon-link:hover {
     cursor: pointer;
@@ -73,7 +74,7 @@
 }
 
 .header__navbar-title--nopointer {
-    cursor: text;
+    cursor: default;
     color: var(--white-color)
 }
 
@@ -87,7 +88,7 @@
     left: 0;
     top: 120%;
     padding: 8px;
-    border-radius: 2px;
+    border-radius: 5px;
     display: none;
     animation: fadeIn ease-in 0.3s;
 }
@@ -121,4 +122,114 @@
 
 .header__qr-link:last-child {
     margin-right: 8px;
+}
+
+
+/* notification */
+
+.header__noti {
+    position: absolute;
+    top: 120%;
+    right: 0;
+    width: 400px;
+    background-color: var(--white-color);
+    border-radius: 5px;
+    border: 1px solid #D3D3D3;
+    cursor: default;
+    transform-origin: calc(100% - 20px) top;
+    animation: growth ease-in 0.2s;
+    display: none;
+}
+
+.header__noti::before {
+    content: "";
+    display: block;
+    border-width: 20px 30px;
+    border-color: transparent transparent white transparent;
+    position: absolute;
+    right: 2px;
+    top: -30px;
+}
+
+.header__noti::after {
+    content: "";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: -16px;
+    width: 90px;
+    height: 20px;
+}
+
+.header__noti-header {
+    height: 40px;
+    background-color: var(--white-color);
+    border-radius: 5px;
+}
+
+.header__noti-header h3 {
+    color: #999;
+    margin: 0 0 0 12px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 40px;
+}
+
+.header__noti-list {
+    padding-left: 0;
+}
+
+.header__noti-item {
+    list-style: none;
+}
+
+.header__noti-item:hover {
+    background-color: #f7f7f7;
+}
+
+.header__noti-item--notviewed {
+    background-color: rgba(34, 116, 165, 0.1);
+}
+
+.header__noti-link {
+    display: flex;
+    padding: 12px;
+    width: 100%;
+    text-decoration: none;
+}
+
+.header__noti-img {
+    width: 64px;
+    object-fit: contain;
+}
+
+.header__noti-info {
+    margin-left: 12px;
+}
+
+.header__noti-name {
+    display: block;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 500;
+}
+
+.header__noti-desc {
+    display: block;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    color: var(--text-color);
+    font-weight: 350;
+}
+
+.header__noti-footer {
+    display: flex;
+}
+
+.header__noti-footer-btn {
+    text-decoration: none;
+    color: var(--text-color);
+    padding: 6px 48px;
+    margin: auto;
+    font-weight: 500;
 }
