--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --black-color: #000;
     --text-color: #333;
     --primary-color: #2274a5;
+    --border-color: #dbdbdb;
 }
 
 * {
@@ -56,4 +57,47 @@ p {
         opacity: 1;
         transform: scale(1);
     }
+}
+
+
+/* modal */
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal__overlay {}
+
+.modal__body {
+    /* width: 300px;
+    height: 300px; */
+    background-color: var(--white-color);
+    z-index: 1;
+    border-radius: 5px;
+}
+
+
+/* btn style */
+
+.btn {
+    min-width: 108px;
+    min-height: 36px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    font-size: 1.2rem;
+    padding: 0;
+}
+
+.btn.btn--primary {
+    color: var(--white-color);
+    background-color: var(--primary-color);
 }
