--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,3 +234,69 @@
     margin: auto;
     font-weight: 500;
 }
+
+
+/* auth form */
+
+.auth-form {
+    width: 500px;
+}
+
+.auth-form__container {
+    padding: 0 32px;
+}
+
+.auth-form__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.auth-form__heading {
+    font-size: 2.0rem;
+    font-weight: 450;
+    color: var(--text-color);
+}
+
+.auth-form__switch-btn {
+    font-size: 1.5rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.auth-form__form {}
+
+.auth-form__input {
+    height: 40px;
+    width: 100%;
+    margin-top: 16px;
+    padding: 0 12px;
+    font-size: 1.3rem;
+    border: 1px solid var(--border-color);
+    border-radius: 2px;
+}
+
+.auth-form__aside {
+    margin-top: 12px;
+}
+
+.auth-form__policy-text {
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 0 12px;
+}
+
+.auth-form__policy-link {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+#box-term {
+    height: 15px;
+    width: 15px;
+    margin: 8px;
+}
+
+.auth-form__controls {
+    margin-top: 80px;
+}
