--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,6 +240,7 @@
 
 .auth-form {
     width: 500px;
+    overflow: hidden;
 }
 
 .auth-form__container {
@@ -299,4 +300,41 @@
 
 .auth-form__controls {
     margin-top: 80px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.auth-form__controls-back {
+    margin-right: 8px;
+}
+
+.auth-form__socials {
+    display: flex;
+    justify-content: space-between;
+    background-color: #f5f5f5;
+    padding: 12px 36px;
+    margin-top: 24px;
+    border-radius: 5px;
+}
+
+.auth-form__socials-icon {
+    font-size: 1.8rem;
+}
+
+.auth-form__socials--facebook {
+    color: var(--white-color);
+    background-color: #486bb0;
+}
+
+.auth-form__socials--facebook .auth-form__socials-icon {
+    color: var(--white-color);
+}
+
+.auth-form__socials--google {
+    color: var(--white-color);
+    background-color: #ec8a1a;
+}
+
+.auth-form__socials-title {
+    margin: 0 24px;
 }
